--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 @import "tailwindcss";
 @import "tailwindcss-animated";
 
+* {
+  font-family: Outfit;
+}
+
+@theme {
+  --color-primary: #1f4e79;
+  --grid-cols-custom: repeat(auto-fill, minmax(200px, 1fr));
+  --breakpoint-xs: 548px;
+}
+
+@layer utilities {
+  .grid-cols-auto {
+    grid-template-columns: var(--grid-cols-custom);
+  }
+}
+
+.active hr {
+  @apply block;
+}
+
+::-webkit-scrollbar {
+  @apply hidden;
+}
+
+dialog::backdrop {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+dialog[open] {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
